// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakResourceCard matches snapshot with fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.005rem;
}

.c13 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c21 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

.c7 {
  display: flex;
  align-items: center;
  align-self: stretch;
}

.c11 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 0.25rem;
}

.c14 {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: flex;
  align-items: center;
}

.c18 {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c18:checked {
  background: #222222;
  border-color: #222222;
}

.c18:disabled {
  pointer-events: none;
}

.c20:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%);
}

.c9 {
  object-fit: contain;
}

.c24 {
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c22 {
  pointer-events: none;
  opacity: 0;
}

input:checked+.c22 {
  opacity: 1;
}

.c3 {
  flex: 1;
  cursor: pointer;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #resource-card-title {
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%),0 0 0 0.3rem rgba(87, 87, 87, 100%);
}

@media (hover: hover) {
  .c18:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover: hover) {
  .c19:hover:not(.c19:checked):not(.c19:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    transform: translate(-50%, -50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover: hover) {
  .c2:hover:not(:has(input:disabled), :active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled), :active) #resource-card-title {
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #resource-card-title {
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="resource-card-title"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FILE_SIZE
          </div>
          <div
            class="c4 c14"
          >
            <div
              class="c13"
            >
              DESCRIPTION
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c15 c16"
        >
          <div
            class="c17"
          >
            <input
              class="c18 c19 c20"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c21 c22"
            >
              <span
                class="c23"
              >
                <img
                  alt=""
                  class="c24"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakResourceCard matches snapshot without fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.005rem;
}

.c14 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c21 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

.c7 {
  display: flex;
  align-items: center;
  align-self: stretch;
}

.c11 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 0.25rem;
}

.c13 {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: flex;
  align-items: center;
}

.c18 {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c18:checked {
  background: #222222;
  border-color: #222222;
}

.c18:disabled {
  pointer-events: none;
}

.c20:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%);
}

.c9 {
  object-fit: contain;
}

.c24 {
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c22 {
  pointer-events: none;
  opacity: 0;
}

input:checked+.c22 {
  opacity: 1;
}

.c3 {
  flex: 1;
  cursor: pointer;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #resource-card-title {
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%),0 0 0 0.3rem rgba(87, 87, 87, 100%);
}

@media (hover: hover) {
  .c18:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover: hover) {
  .c19:hover:not(.c19:checked):not(.c19:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    transform: translate(-50%, -50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover: hover) {
  .c2:hover:not(:has(input:disabled), :active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled), :active) #resource-card-title {
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #resource-card-title {
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="resource-card-title"
          >
            TITLE
          </div>
          <div
            class="c4 c13"
          >
            <div
              class="c14"
            >
              DESCRIPTION
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c15 c16"
        >
          <div
            class="c17"
          >
            <input
              class="c18 c19 c20"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c21 c22"
            >
              <span
                class="c23"
              >
                <img
                  alt=""
                  class="c24"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakResourceCard renders an editable tag when isEditable is true 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.005rem;
}

.c14 {
  color: #575757;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: -0.005rem;
}

.c15 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background: #b0e2de;
  border-radius: 0.375rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  letter-spacing: 0.0115rem;
}

.c17 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c19 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c25 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

.c7 {
  display: flex;
  align-items: center;
  align-self: stretch;
}

.c11 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 0.25rem;
}

.c13 {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.c16 {
  display: flex;
  align-self: flex-end;
  gap: 0.5rem;
}

.c18 {
  display: flex;
  align-items: center;
}

.c20 {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c20:checked {
  background: #222222;
  border-color: #222222;
}

.c20:disabled {
  pointer-events: none;
}

.c22:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%);
}

.c9 {
  object-fit: contain;
}

.c26 {
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c24 {
  pointer-events: none;
  opacity: 0;
}

input:checked+.c24 {
  opacity: 1;
}

.c3 {
  flex: 1;
  cursor: pointer;
  display: flex;
}

.c3:has(input:disabled) {
  cursor: default;
}

.c3:has(input:disabled) #resource-card-title {
  text-decoration: none;
}

.c2:has(input:focus-visible) {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%),0 0 0 0.3rem rgba(87, 87, 87, 100%);
}

@media (hover: hover) {
  .c20:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover: hover) {
  .c21:hover:not(.c21:checked):not(.c21:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    transform: translate(-50%, -50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover: hover) {
  .c2:hover:not(:has(input:disabled), :active) {
    background: #f2f2f2;
  }

  .c2:hover:not(:has(input:disabled), :active) #resource-card-title {
    text-decoration: underline;
  }

  .c2:active:not(:has(input:disabled)) #resource-card-title {
    text-decoration: underline;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
            id="resource-card-title"
          >
            TITLE
          </div>
          <div
            class="c4 c13"
          >
            <div
              class="c14"
            >
              DESCRIPTION
            </div>
            <div
              class="c15 c16"
            >
              <div
                class="c4"
              >
                Editable
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c17 c18"
        >
          <div
            class="c19"
          >
            <input
              class="c20 c21 c22"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c23 c24"
            >
              <span
                class="c25"
              >
                <img
                  alt=""
                  class="c26"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
